Basic layout of iframes and page sections added.

--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
     <meta name="description" content="A fanpage celebration of the great Ichiha Itachi">
     <meta name="keywords" content="uchiha, itachi, naruto, anime, manga">
     <link rel="stylesheet" href="assets/css/style.css">
-    <title>Document</title>
+    <title>Uchiha Itachi</title>
 </head>
 <body>
-    
+    <div id="wrapper">
+        <ul>
+            <li id="first">
+                <div class="pageleft" id="first-left">
+                    <iframe src="https://www.youtube.com/embed/fT6QWY6rX0k?start=195" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="pageright" id="first-right"></div>
+            </li>
+            <li id="second">
+                <div class="pageleft" id="second-left"></div>
+                <div class="pageright" id="second-right">
+                    <iframe src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+            </li>
+            <li id="third">
+                <div class="pageleft" id="third-left"></div>
+                <div class="pageright" id="third-center"></div>
+            </li>
+        </ul>
+    </div>
 </body>
 </html>
