Added placeholder image for replacement. Changed basic structure of html elements in order to better target elements. Added styling to scrollbar and limited scrolling to page container while fixing header and footer sections to top and bottom.

--- a/index.html
+++ b/index.html
@@ -10,25 +10,32 @@
     <title>Uchiha Itachi</title>
 </head>
 <body>
-    <div id="wrapper">
-        <ul>
-            <li id="first">
-                <div class="pageleft" id="first-left">
-                    <iframe src="https://www.youtube.com/embed/fT6QWY6rX0k?start=195" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-                <div class="pageright" id="first-right"></div>
-            </li>
-            <li id="second">
-                <div class="pageleft" id="second-left"></div>
-                <div class="pageright" id="second-right">
-                    <iframe src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </li>
-            <li id="third">
-                <div class="pageleft" id="third-left"></div>
-                <div class="pageright" id="third-center"></div>
-            </li>
-        </ul>
-    </div>
+    <header>
+        <div id="header-div">
+            <h1>UCHIHA ITACHI</h1>
+            <h2>The Infamous Rogue</h2>
+        </div>
+    </header>
+    <main id="page-container">
+        <section class="page" id="intro">
+            <div></div>
+            <div></div>
+            <div id="center"></div>
+        </section>
+        <section class="page" id="about-itachi">
+
+        </section>
+        <section class="page" id="about-morality">
+
+        </section>
+        <section class="page" id="about-reveal">
+
+        </section>
+        <section class="page" id="find-more">
+
+        </section>
+    </main>
+    <footer>
+    </footer>
 </body>
 </html>
