Added to first introduction section. preliminary styling for main browser size with placeholder image.

--- a/index.html
+++ b/index.html
@@ -18,12 +18,39 @@
     </header>
     <main id="page-container">
         <section class="page" id="intro">
-            <div></div>
-            <div></div>
-            <div id="center"></div>
+            <div id="right">
+                <div id="textbox-right">
+                    <h1>
+                        Background
+                    </h1>
+                    <p>
+                        Uchiha Itachi is a fictional character who appeared in the popular Manga and Anime series Naruto and Naruto Shippuden.
+                        <br>
+                        The iconic character poses a moral dilemma for viewers as he is guilty of slaughtering his entire clan, only with the exception of his younger brother Sasuke.
+                        <br>
+                        The reasons for his actions are of immense importance for the plot of the series and both get to experience him as ultimate evil as well as a hero cast into darkness for the sake of the greater good. 
+                    </p>
+                </div>
+            </div>
+            <div id="left">
+                <div id="textbox-left">
+                    <h1>
+                        spoiler alert
+                    </h1>
+                    <p>
+                        The content of this page reveals huge plot-twisters in the named anime and manga
+                        <br>
+                        Please, be advised that you will miss out on a fantastic emotional ride if you view the content of this page before watching the series.
+                    </p>
+                </div>
+            </div>
+            <div id="center">
+
+            </div>
         </section>
         <section class="page" id="about-itachi">
-
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="float:right;"></iframe>
         </section>
         <section class="page" id="about-morality">
 
