Added nav element to head-div with initial styling and anchor links to page sections

--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
 <body>
     <header>
         <div id="header-div">
-            <h1>UCHIHA ITACHI</h1>
-            <h2>The Infamous Rogue</h2>
+            <div id="header-logo">
+                <h1>UCHIHA ITACHI</h1>
+                <h2>The Infamous Rogue</h2>
+            </div>
+            <nav id="header-nav">
+                <ul>
+                    <a href="#intro">
+                        <li>Introduction</li>
+                    </a>
+                    <a href="#about-itachi">
+                        <li>About</li>
+                    </a>
+                    <a href="#about-morality">
+                        <li>Appears On</li>
+                    </a>
+                </ul>
+            </nav>
         </div>
     </header>
     <main id="page-container">
@@ -49,8 +64,9 @@
             </div>
         </section>
         <section class="page" id="about-itachi">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="float:right;"></iframe>
+            <iframe width="336" height="189" src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="336" height="189" src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe width="336" height="189" src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
         <section class="page" id="about-morality">
 
