Added placeholder table with initial stiling in appears section

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <a href="#about-itachi">
                         <li>About</li>
                     </a>
-                    <a href="#about-morality">
+                    <a href="#appears">
                         <li>Appears On</li>
                     </a>
                 </ul>
@@ -68,14 +68,65 @@
             <iframe width="336" height="189" src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <iframe width="336" height="189" src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </section>
-        <section class="page" id="about-morality">
-
-        </section>
-        <section class="page" id="about-reveal">
-
-        </section>
-        <section class="page" id="find-more">
-
+        <section class="page" id="appears">
+            <div id="left-table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="3"><h1>Naruto</h1></th>
+                        </tr>
+                        <tr>
+                            <th>From<br>Episode</th>
+                            <th>To<br>Episode</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>85</td>
+                            <td>89</td>
+                            <td>Itachis first appearance in the Saga, infiltrating his home village</td>
+                        </tr>
+                        <tr>
+                            <td>113</td>
+                            <td>115</td>
+                            <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
+                        </tr>
+                        <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
+                    </tbody>
+                </table>
+            </div>
+            <div id="right-table-container">
+                <table>
+                    <thead>
+                        <tr>
+                            <th colspan="3"><h1>Naruto Shippuden</h1></th>
+                        </tr>
+                        <tr>
+                            <th>From<br>Episode</th>
+                            <th>To<br>Episode</th>
+                            <th>Description</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>85</td>
+                            <td>89</td>
+                            <td>Itachis first appearance in the Saga, infiltrating his home village</td>
+                        </tr>
+                        <tr>
+                            <td>113</td>
+                            <td>115</td>
+                            <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
+                        </tr>
+                        <tr></tr>
+                        <tr></tr>
+                        <tr></tr>
+                    </tbody>
+                </table>
+            </div>
         </section>
     </main>
     <footer>
