Added content to startup page with warning message. Preliminary styling

--- a/index.html
+++ b/index.html
@@ -16,122 +16,15 @@
                 <h1>UCHIHA ITACHI</h1>
                 <h2>The Infamous Rogue</h2>
             </div>
-            <nav id="header-nav">
-                <ul>
-                    <a href="#intro">
-                        <li>Introduction</li>
-                    </a>
-                    <a href="#about-itachi">
-                        <li>About</li>
-                    </a>
-                    <a href="#appears">
-                        <li>Appears On</li>
-                    </a>
-                    
-                    <a href="mainsite.html">
-                        <li>newpag</li>
-                    </a>
-                </ul>
-            </nav>
         </div>
     </header>
     <main id="page-container">
-        <section class="page" id="intro">
-            <div id="right">
-                <div id="textbox-right">
-                    <h1>
-                        Background
-                    </h1>
-                    <p>
-                        Uchiha Itachi is a fictional character who appeared in the popular Manga and Anime series Naruto and Naruto Shippuden.
-                        <br>
-                        The iconic character poses a moral dilemma for viewers as he is guilty of slaughtering his entire clan, only with the exception of his younger brother Sasuke.
-                        <br>
-                        The reasons for his actions are of immense importance for the plot of the series and both get to experience him as ultimate evil as well as a hero cast into darkness for the sake of the greater good. 
-                    </p>
-                </div>
+        <a href="mainsite.html">
+            <div id="warning-message">
+                <h1>Warning</h1>
+                <h1>click to enter</h1>
             </div>
-            <div id="left">
-                <div id="textbox-left">
-                    <h1>
-                        spoiler alert
-                    </h1>
-                    <p>
-                        The content of this page reveals huge plot-twisters in the named anime and manga
-                        <br>
-                        Please, be advised that you will miss out on a fantastic emotional ride if you view the content of this page before watching the series.
-                    </p>
-                </div>
-            </div>
-            <div id="center">
-
-            </div>
-        </section>
-        <section class="page" id="about-itachi">
-            <iframe width="336" height="189" src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="336" height="189" src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="336" height="189" src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-        <section class="page" id="appears">
-            <div id="left-table-container">
-                <table>
-                    <thead>
-                        <tr>
-                            <th colspan="3"><h1>Naruto</h1></th>
-                        </tr>
-                        <tr>
-                            <th>From<br>Episode</th>
-                            <th>To<br>Episode</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>85</td>
-                            <td>89</td>
-                            <td>Itachis first appearance in the Saga, infiltrating his home village</td>
-                        </tr>
-                        <tr>
-                            <td>113</td>
-                            <td>115</td>
-                            <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
-                        </tr>
-                        <tr></tr>
-                        <tr></tr>
-                        <tr></tr>
-                    </tbody>
-                </table>
-            </div>
-            <div id="right-table-container">
-                <table>
-                    <thead>
-                        <tr>
-                            <th colspan="3"><h1>Naruto Shippuden</h1></th>
-                        </tr>
-                        <tr>
-                            <th>From<br>Episode</th>
-                            <th>To<br>Episode</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>85</td>
-                            <td>89</td>
-                            <td>Itachis first appearance in the Saga, infiltrating his home village</td>
-                        </tr>
-                        <tr>
-                            <td>113</td>
-                            <td>115</td>
-                            <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
-                        </tr>
-                        <tr></tr>
-                        <tr></tr>
-                        <tr></tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
+        </a>
     </main>
     <footer>
     </footer>
