Added responsive styling to header section

--- a/index.html
+++ b/index.html
@@ -23,6 +23,18 @@
             <div id="warning-message">
                 <h1>Warning</h1>
                 <h1>click to enter</h1>
+                <div id="left">
+                    <div id="textbox-left">
+                        <h1>
+                            spoiler alert
+                        </h1>
+                        <p>
+                            The content of this page reveals huge plot-twisters in the named anime and manga
+                            <br>
+                            Please, be advised that you will miss out on a fantastic emotional ride if you view the content of this page before watching the series.
+                        </p>
+                    </div>
+                </div>
             </div>
         </a>
     </main>
