--- a/mainsite.html
+++ b/mainsite.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="A fanpage celebration of the great Ichiha Itachi">
+    <meta name="description" content="A fanpage celebration of the great Uchiha Itachi">
     <meta name="keywords" content="uchiha, itachi, naruto, anime, manga">
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Uchiha Itachi</title>
@@ -14,7 +14,6 @@
         <div id="header-div">
             <div id="header-logo">
                 <h1>UCHIHA ITACHI</h1>
-                <h2>The Infamous Rogue</h2>
             </div>
             <nav id="header-nav">
                 <ul>
@@ -25,7 +24,7 @@
                         <li>About</li>
                     </a>
                     <a href="#appears">
-                        <li>Appears On</li>
+                        <li>Appears</li>
                     </a>
                 </ul>
             </nav>
@@ -44,18 +43,6 @@
                         The iconic character poses a moral dilemma for viewers as he is guilty of slaughtering his entire clan, only with the exception of his younger brother Sasuke.
                         <br>
                         The reasons for his actions are of immense importance for the plot of the series and both get to experience him as ultimate evil as well as a hero cast into darkness for the sake of the greater good. 
-                    </p>
-                </div>
-            </div>
-            <div id="left">
-                <div id="textbox-left">
-                    <h1>
-                        spoiler alert
-                    </h1>
-                    <p>
-                        The content of this page reveals huge plot-twisters in the named anime and manga
-                        <br>
-                        Please, be advised that you will miss out on a fantastic emotional ride if you view the content of this page before watching the series.
                     </p>
                 </div>
             </div>
