restructuring css for better readybility and renaming element in html fors better organization

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                             <br>
                             Please, be advised that you will miss out on a fantastic emotional ride if you view the content of this page before watching the series.
                         </p>
+                        <img src="https://www.kindpng.com/picc/m/157-1579216_itachi-uchiha-free-png-image-itachi-anbu-png.png" alt="Itachi Uchiha Free Png Image - Itachi Anbu Png, Transparent Png@kindpng.com">
                     </div>
                 </div>
             </div>
