--- a/mainsite.html
+++ b/mainsite.html
@@ -10,12 +10,12 @@
     <title>Uchiha Itachi</title>
 </head>
 <body>
-    <header>
-        <div id="header-div">
-            <div id="header-logo">
+    <nav>
+        <div id="nav-div">
+            <div id="nav-logo">
                 <h1>UCHIHA ITACHI</h1>
             </div>
-            <nav id="header-nav">
+            <div id="nav-menu">
                 <ul>
                     <a href="#intro">
                         <li>Introduction</li>
@@ -27,9 +27,9 @@
                         <li>Appears</li>
                     </a>
                 </ul>
-            </nav>
+            </div>
         </div>
-    </header>
+    </nav>
     <main id="page-container">
         <section class="page" id="intro">
             <div id="right">
@@ -47,7 +47,7 @@
                 </div>
             </div>
             <div id="center">
-
+                
             </div>
         </section>
         <section class="page" id="about-itachi">
