Uploaded new img for headersection and color styled header section for layout continuity

--- a/mainsite.html
+++ b/mainsite.html
@@ -31,7 +31,7 @@
         </div>
     </nav>
     <main id="page-container">
-        <section class="page" id="intro">
+        <header class="page" id="intro">
             <div id="right">
                 <div id="textbox-right">
                     <h1>
@@ -46,10 +46,9 @@
                     </p>
                 </div>
             </div>
-            <div id="center">
-                
+            <div id="left">
             </div>
-        </section>
+        </header>
         <section class="page" id="about-itachi">
             <iframe width="336" height="189" src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <iframe width="336" height="189" src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
