added basic structure and styling for about section

--- a/mainsite.html
+++ b/mainsite.html
@@ -30,7 +30,7 @@
             </div>
         </div>
     </nav>
-    <main id="page-container">
+    <div id="page-container">
         <header class="page" id="intro">
             <div id="right">
                 <div id="textbox-right">
@@ -47,72 +47,112 @@
             <div id="left">
             </div>
         </header>
-        <section class="page" id="about-itachi">
-            <iframe width="336" height="189" src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="336" height="189" src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            <iframe width="336" height="189" src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        </section>
-        <section class="page" id="appears">
-            <div id="left-table-container">
-                <table>
-                    <thead>
-                        <tr>
-                            <th colspan="3"><h1>Naruto</h1></th>
-                        </tr>
-                        <tr>
-                            <th>From<br>Episode</th>
-                            <th>To<br>Episode</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>85</td>
-                            <td>89</td>
-                            <td>Itachis first appearance in the Saga, infiltrating his home village</td>
-                        </tr>
-                        <tr>
-                            <td>113</td>
-                            <td>115</td>
-                            <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
-                        </tr>
-                        <tr></tr>
-                        <tr></tr>
-                        <tr></tr>
-                    </tbody>
-                </table>
-            </div>
-            <div id="right-table-container">
-                <table>
-                    <thead>
-                        <tr>
-                            <th colspan="3"><h1>Naruto Shippuden</h1></th>
-                        </tr>
-                        <tr>
-                            <th>From<br>Episode</th>
-                            <th>To<br>Episode</th>
-                            <th>Description</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>85</td>
-                            <td>89</td>
-                            <td>Itachis first appearance in the Saga, infiltrating his home village</td>
-                        </tr>
-                        <tr>
-                            <td>113</td>
-                            <td>115</td>
-                            <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
-                        </tr>
-                        <tr></tr>
-                        <tr></tr>
-                        <tr></tr>
-                    </tbody>
-                </table>
-            </div>
-        </section>
-    </main>
+
+        <main>
+            <section class="page" id="about-itachi">
+                <div class="video-card">
+                    <div class="iframe-wrapper">
+                        <iframe src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="about-textbox">
+                        <h1>
+                            RUNNING ALONG
+                        </h1>
+                        <p>
+                            hello moto
+                        </p>
+                    </div>
+                </div>
+                <div class="video-card">
+                    <div class="iframe-wrapper">
+                        <iframe src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="about-textbox">
+                        <h1>
+                            RUNNING ALONG
+                        </h1>
+                        <p>
+                            hello moto
+                        </p>
+                    </div>
+                </div>
+                <div class="video-card">
+                    <div class="iframe-wrapper">
+                        <iframe src="https://www.youtube.com/embed/4D6as7R0OGM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="about-textbox">
+                        <h1>
+                            RUNNING ALONG
+                        </h1>
+                        <p>
+                            hello moto
+                        </p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="page" id="appears">
+                <div id="left-table-container">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th colspan="3"><h1>Naruto</h1></th>
+                            </tr>
+                            <tr>
+                                <th>From<br>Episode</th>
+                                <th>To<br>Episode</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>85</td>
+                                <td>89</td>
+                                <td>Itachis first appearance in the Saga, infiltrating his home village</td>
+                            </tr>
+                            <tr>
+                                <td>113</td>
+                                <td>115</td>
+                                <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
+                            </tr>
+                            <tr></tr>
+                            <tr></tr>
+                            <tr></tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div id="right-table-container">
+                    <table>
+                        <thead>
+                            <tr>
+                                <th colspan="3"><h1>Naruto Shippuden</h1></th>
+                            </tr>
+                            <tr>
+                                <th>From<br>Episode</th>
+                                <th>To<br>Episode</th>
+                                <th>Description</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>85</td>
+                                <td>89</td>
+                                <td>Itachis first appearance in the Saga, infiltrating his home village</td>
+                            </tr>
+                            <tr>
+                                <td>113</td>
+                                <td>115</td>
+                                <td>Itachi is assigned to capture a Jinchuuriki and faces of with the 4:th hokage</td>
+                            </tr>
+                            <tr></tr>
+                            <tr></tr>
+                            <tr></tr>
+                        </tbody>
+                    </table>
+                </div>
+            </section>
+        </main>
+    </div>
     <footer>
     </footer>
 </body>
