added all content to about section.

--- a/mainsite.html
+++ b/mainsite.html
@@ -52,27 +52,46 @@
             <section class="page" id="about-itachi">
                 <div class="video-card">
                     <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
+                        <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                     <div class="about-textbox">
                         <h1>
-                            RUNNING ALONG
+                            Naruto Anime
                         </h1>
                         <p>
-                            hello moto
+                            In the very popular Naruto and Naruto Shippuden anime, Itachi is the older brother of main character Sasuke.
+                            <br><br>
+                            To get an understanding of the context, watch this fan made trailer.
                         </p>
                     </div>
                 </div>
                 <div class="video-card">
                     <div class="iframe-wrapper">
-                        <iframe src="https://www.youtube.com/embed/zhxtBW0HIbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        <iframe src="https://www.youtube.com/embed/zhxtBW0HIbc?start=24" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+                    <div class="about-textbox">
+                        <h1>
+                            ITACHIS STORY
+                        </h1>
+                        <p>
+                            In the series fictional timeline, powerful ninja clans and villages compete for power.
+                            <br><br>
+                            Itachi grows up as a member of the renowned hidden leaf villages most prominent clan "The Uchiha".
+                        </p>
+                    </div>
+                </div>
+                <div class="video-card">
+                    <div class="iframe-wrapper">
+                        <iframe src="https://www.youtube.com/embed/UYCnB-jnvSg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                     <div class="about-textbox">
                         <h1>
-                            RUNNING ALONG
+                            ITACHIS MOTIVES
                         </h1>
                         <p>
-                            hello moto
+                            Itachi shows his memories to his younger brother, in order to explain his actions.
+                            <br><br>
+                            Until this moment in the series, Itachi is portrayed as a brutal murderer and villain.
+                            <br><br>
+                            A popular youtube meme is to record the reactions to this revealing as it is often deeply emotional for the fans.
                         </p>
                     </div>
                 </div>
@@ -82,10 +101,12 @@
                     </div>
                     <div class="about-textbox">
                         <h1>
-                            RUNNING ALONG
+                            HERO / VILLAIN ?
                         </h1>
                         <p>
-                            hello moto
+                            Despite revealing his good intentions to the viewers, Itachi is still judged harshly by many.
+                            <br><br>
+                            Was he a dark knight bearing a painful burden for the sake of peace, or a selfish rogue only interested in himself and his younger brother?
                         </p>
                     </div>
                 </div>
