--- a/mainsite.html
+++ b/mainsite.html
@@ -50,6 +50,7 @@
 
         <main>
             <section class="page" id="about-itachi">
+                <h1>About</h1>
                 <div class="video-card">
                     <div class="iframe-wrapper">
                         <iframe src="https://www.youtube.com/embed/oE3Ty5YRXiw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
