Added extra stylesheet for index.html. Imported new img firstpageitachi and styled to index.html.

--- a/index.html
+++ b/index.html
@@ -6,35 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="A fanpage celebration of the great Ichiha Itachi">
     <meta name="keywords" content="uchiha, itachi, naruto, anime, manga">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/indexstyle.css">
     <title>Uchiha Itachi</title>
 </head>
 <body>
-    <header>
-        <div id="header-div">
-            <div id="header-logo">
+    <nav>
+        <div id="nav-div">
+            <div id="nav-logo">
                 <h1>UCHIHA ITACHI</h1>
-                <h2>The Infamous Rogue</h2>
             </div>
         </div>
-    </header>
+    </nav>
     <main id="page-container">
         <a href="mainsite.html">
-            <div id="warning-message">
-                <h1>Warning</h1>
-                <h1>click to enter</h1>
-                <div id="left">
-                    <div id="textbox-left">
+            <div class="page" id="intro">
+                <div id="warning-right">
+                    <div id="textbox-right">
                         <h1>
-                            spoiler alert
+                            WARNING <br> Spoiler Alert
                         </h1>
                         <p>
-                            The content of this page reveals huge plot-twisters in the named anime and manga
+                            The content of this page reveals major plot developments in Naruto and Naruto Shippuden.
                             <br>
-                            Please, be advised that you will miss out on a fantastic emotional ride if you view the content of this page before watching the series.
+                            Viewing the content of this page, might spoil the experience of watching the series.
                         </p>
-                        <img src="https://www.kindpng.com/picc/m/157-1579216_itachi-uchiha-free-png-image-itachi-anbu-png.png" alt="Itachi Uchiha Free Png Image - Itachi Anbu Png, Transparent Png@kindpng.com">
+                        <h1>
+                            Click to enter.
+                        </h1>
                     </div>
+                </div>
+                <div id="warning-left">
                 </div>
             </div>
         </a>
